# SxQLear

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml
backend/api/: connections.py  datasets.py  errors.py  inference.py  memory.py  projects.py  router.py  validation.py
backend/core/dataset/: constructor.py  sql_generator.py
backend/core/inference/: __init__.py  engine.py  lexical.py  statistical.py  structural.py
backend/core/memory/: project_memory.py
backend/core/schema/: __init__.py  crawler.py  graph.py
backend/core/validation/: validator.py
backend/db/: __init__.py  orm_models.py  session.py
backend/db/repositories/: __init__.py  project_repo.py
backend/models/: __init__.py  connection.py  dataset.py  memory.py  relationship.py  schema.py
backend/scripts/: seed_test_db.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Badges.tsx  Button.tsx
frontend/src/components/inference/: RelationshipCard.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/schema/: SchemaGraph.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: projectStore.ts  validationStore.ts
frontend/src/types/: index.ts
frontend/src/views/: ConnectionView.tsx  DatasetView.tsx  InferenceView.tsx  MemoryView.tsx  SchemaView.tsx  ValidationView.tsx
