[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sxqlear-backend"
version = "0.1.0"
description = "SxQLear backend — schema cognition and dataset construction engine"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Local persistence
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",

    # Target DB drivers (all optional at runtime)
    "psycopg2-binary>=2.9.9",   # PostgreSQL
    "pymysql>=1.1.1",            # MySQL
    # mssql requires pyodbc — optional, not listed here to avoid CI issues

    # Schema graph analysis
    "networkx>=3.3",

    # Statistical profiling
    "numpy>=1.26.0",

    # Lexical similarity
    # (using stdlib difflib — no extra dependency needed for MVP)

    # Credential encryption
    "cryptography>=42.0.0",

    # HTTP client for optional LLM calls
    "httpx>=0.27.0",

    # Async utilities
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
embeddings = [
    # Optional: local embedding model for semantic inference
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
